# jewpizza

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.controller  LICENSE  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  init-db.sh  j2_env.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.py  tailwind.config.js  urls.py  wsgi.py
.github/actions/deploy/: action.yml
.github/actions/docker-build-push/: action.yml
.github/workflows/: deploy.yml  docker-build-dev.yml  docker-build.yml  flag-dependencies.yml
.github/workflows/actions/docker-build-push/: action.yml
backend/: .flake8  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/admin_tools/: forms.py  tests.py  urls.py  views.py
backend/admin_tools/jinja2/admin_tools/: base.html  container_status.html  form.html  send_text_message.html  sse_status.html
backend/api/: views.py
backend/calls/: apps.py
backend/jew_pizza/: asgi.py  constants.py  j2_env.py  jinja2.py  settings.py  signals.py  storage.py  test_utils.py  twilio.py  urls.py  utils.py  wsgi.py
backend/jew_pizza/templates/admin/: base_site.html  favicon.html
backend/jewpizza/: asgi.py  settings.py  urls.py  wsgi.py
backend/notifications/: admin.py  constants.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
backend/notifications/jinja2/notifications/: contact.html  macros.html  newsletter.html  sign-up.html
backend/notifications/migrations/: 0001_initial.py
backend/notifications/templates/admin/notifications/signup/: change_list.html
backend/notifications/templates/admin/notifications/textmessage/: change_list.html
backend/notifications/templates/notifications/: send_notification.html
backend/radio/: apps.py  signals.py  tasks.py  urls.py  views.py
backend/radio/jinja2/radio/: http.liq  protocols.liq  radio.liq  reload.liq
backend/radio/jinja2/radio/scripts/: radio.liq  uplink.liq
backend/shows/: admin.py  apps.py  constants.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/shows/fixtures/: episodes.json  showdates.json
backend/shows/fixtures/shows/: episodes.json.bz2  showdates.json  showdates.json.bz2
backend/shows/jinja2/shows/: listen.html  podcast_rss.xml  show_detail.html  show_list.html  show_master_list.html  shows.html  shows_master_list.html
backend/shows/jinja2/shows/snippets/: bmir.html  misc.html  showgram.html  tigwit.html  twwit.html
backend/shows/management/commands/: load_shows_from_remote.py
backend/shows/migrations/: 0001_initial.py  0002_episode_peaks_alter_episode_guid_and_more.py
backend/shows/static/shows/js/: player.js
backend/webcore/: admin.py  apps.py  constants.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/webcore/jinja2/webcore/: base.html  base_content_only.html  base_full.html  bio.html  content_only.html  error.html  home.html  index.html  macros.html  placeholder.html  social.html  testimonials.html
backend/webcore/jinja2/webcore/components/: clippy.html  debug.html  emojis.html  favicon.html  jewippy.html  messages.html  modal.html  navbar.html  player.html
backend/webcore/jinja2/webcore/macros/: random_spin.html
backend/webcore/management/commands/: cors.py  runserver.py
backend/webcore/migrations/: 0001_initial.py
backend/webcore/static/css/: styles.min.css  tailwind.css
backend/webcore/static/js/: base.js  base.min.js
backend/webcore/static/webcore/images/jewippy/: Explode2.apng  Flirt.apng  Headphones.apng  Idle.apng  Idle2.apng  Melting.apng  Rotating.apng  XanaxRain.apng  test.html
backend/webcore/static/webcore/js/: base.js  home.js  jewippy.js
controller/: Dockerfile
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  entrypoint.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.css  unavailable.html  vite.config.js
frontend-dev/: copy_vendor_deps.sh  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css  app.html  base.js  home.js  index.js  jewippy.js  placeholder.js  player.js
frontend/src/routes/: +layout.svelte  +page.svelte
icecast/: Dockerfile  icecast.xml.template
jew_pizza/: admin.py  apps.py  asgi.py  manage.py  models.py  pyproject.toml  settings.py  views.py
jew_pizza/core/: urls.py  views.py
jew_pizza/core/jinja2/core/: base.html  home.html
jew_pizza/jew_pizza/: j2_env.py  settings.py  urls.py  wsgi.py
jew_pizza/jinja2/: base.html  home.html
jew_pizza/migrations/: 0001_initial.py
jew_pizza/static/css/: chota.min.css  space-mono.css  styles.css
jew_pizza/static/js/: alpine.min.js
jew_pizza/templates/admin/: base.html
jew_pizza/webcore/: apps.py  urls.py  views.py
jew_pizza/webcore/jinja2/webcore/: base.html  index.html  placeholder.html
jew_pizza/webcore/static/css/: space-mono.css  styles.min.css  tailwind.css
jew_pizza/webcore/static/js/: alpine.min.js  moment.min.js  placeholder.js  placeholder.min.js
nginx/: Dockerfile  requirements.txt
nginx/image/docker-entrypoint.d/: 25-jinja2-cli-config.sh  25-jinja2-on-templates.sh  25-jinja2-templates.sh  40-set-digitalocean-token.sh  50-wait-for-upstream-services.sh
nginx/image/etc/nginx/: modules.conf  options-ssl-nginx.conf  proxy_busy_error
nginx/image/etc/nginx/conf.d/: compression.conf  logs.conf
nginx/image/etc/nginx/templates/: jewpizza.conf.j2
nginx/image/etc/nginx/unavailable/: unavailable.html
radio/: Dockerfile  Dockerfile.controller  entrypoint.sh  radio.liq  reload.liq
radio/image/: entrypoint.sh  healthcheck.sh
scripts/: check-versions.sh  init-db.sh
sse/: Dockerfile  entrypoint.sh  pyproject.toml  sse.py  test.html
tailwind/: package-lock.json  package.json  tailwind.config.js
tailwind-dev/: package-lock.json
