[tool.poetry]
name = "jew-pizza"
version = "0.0.1-dev"
description = ""
authors = ["David Cooper <david@jew.pizza>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
psycopg2 = "^2.9"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
