[tool.poetry]
name = "jew-pizza"
version = "0.0.1-dev"
description = ""
authors = ["David Cooper <david@jew.pizza>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
Jinja2 = "^3.0.1"
django-recurrence = "^1.10.3"
psycopg2-binary = {version = "^2.9.1", platform = "linux"}
django-environ = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
