[tool.poetry]
name = "jew-pizza"
version = "0.0.1-dev"
description = ""
authors = ["David Cooper <david@jew.pizza>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
boto3 = "^1.21.28"
Brotli = "^1.0.9"
Django = "^4.0.3"
django-constance = "^2.8.0"
django-environ = "^0.8.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^6.1.0"}
django-recurrence = "^1.11.1"
django-redis = "^5.2.0"
django-s3direct = "^2.0.0"
django-widget-tweaks = "^1.4.12"
gunicorn = "^20.1.0"
hiredis = "^2.0.0"
huey = "^2.4.3"
Jinja2 = "^3.1.1"
jinja-markdown = "^1.210911"
psycopg2 = "^2.9.3"
python-dateutil = "^2.8.2"
redis = "^4.2.0"
requests = "^2.27.1"
twilio = "^7.8.0"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
django-extensions = "^3.1.5"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
ipython = "^8.2.0"
isort = "^5.10.1"
lastversion = "^2.2.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.1"
watchdog = {extras = ["watchmedo"], version = "^2.1.7"}
yq = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '/migrations/'
preview = true

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'DJANGOTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_django = ['django']
known_djangothirdparty = ['constance', 'django_redis', 'environ', 'phonenumber_field', 'recurrence',
                          'widget_tweaks', 'huey.contrib', 's3direct']
skip = ['migrations']

[tool.pytest.ini_options]
addopts = '-s --cov=. --cov-report=term-missing'
python_files = 'tests.py'
cache_dir = '/tmp/.pytest_cache'
filterwarnings = [
    # Some warnings out of my control]
    "ignore:.*constance.apps.ConstanceConfig.*:django.utils.deprecation.RemovedInDjango41Warning",
    'ignore:::constance',
    'ignore:::markdown',
    'ignore:::recurrence',
    'ignore:::redis',
    'ignore:::s3direct',
]
