[tool.poetry]
name = "jewpizza"
version = "0.0.1"
description = "jew.pizza Backend"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-environ = "^0.11.2"
psycopg = "^3.1.18"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
wait-for-it = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
ipython = "^8.22.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
