[tool.poetry]
name = "jew-pizza-sse"
version = "0.1.0"
description = ""
authors = ["\"David Cooper\" <david@jew.pizza>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiohttp-sse = "^2.1.0"
aioredis = "^2.0.0"
gunicorn = "^20.1.0"
schema = "^0.7.4"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
watchdog = {extras = ["watchmedo"], version = "^2.1.6"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
