[tool.poetry]
name = "jew-pizza-sse"
version = "0.1.0"
description = ""
authors = ["\"David Cooper\" <david@jew.pizza>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiohttp-sse = "^2.1.0"
aioredis = "^2.0.1"
gunicorn = "^20.1.0"
schema = "^0.7.5"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.0.1"
watchdog = {extras = ["watchmedo"], version = "^2.1.6"}
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
